build/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    k8s-app: test
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: test
