build/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
    - host: test.apps.ibm.cp.example
      http:
        paths:
          - path: /hello
            backend:
              serviceName: test
              servicePort: 80
